<resources>
    <string name="app_name">MatchTravel</string>

    <string name="label_one">Take the survey and find which cities match your interest!</string>
    <string name="label_two">Going ahead, you confirm to accept our privacy conditions and terms</string>
    <string name="name_of_the_users">name user</string>
    <string name="age_user">age user</string>
    <string name="status_user">status user</string>
    <string name="country_user">country user</string>
    <string name="about_yourself">About Yourself</string>
    <string name="country">Country:</string>
    <string name="welcome">Welcome!</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="status">Status:</string>
    <string name="user_profile_pic">user profile pic</string>
    <string name="speak_about_yourself">Speak about yourself..(max 200 characters)</string>
    <string name="btn_find_destinations">button to find destination doing a survey</string>

    <string name="kindtrip">Which kind of trip you\n like to do this time? </string>
    <string name="typetravel">Do you like travel abroad\n or locally?</string>
    <string name="budget">Which is your budget?</string>
    <string name="arrive">What would you like to do once arrived?</string>
    <string name="tourists">How much you are annoyed by the tourists?</string>
    <string name="weather">Hot or cold?</string>
    <string name="profileown">Your profile</string>

    <string name="textEmptyHome">Oh, oh. Seems like you have not any favourite destination yet.\nTake the survey or look for a new city!</string>
    <string name="notifyCityAdded">You just added one city to your list!</string>
    <!--Le stringe qui sotto sono utilizzate per le sharedPreference. Non cambiare MAI.-->
    <string name="sharedPref_file">myPrefFile</string>
    <string name="sharedPref_db_init">dbIsInitialize</string>
    <string name="sharedPref_current_user">currentUser</string>
    <string name="sharedPref_firstLogin">isFirstLogin</string>

    <!--Stringe create automaticamente-->
    <string name="home">Your favorites</string>
    <string name="search">Search</string>
    <string name="survey">Survey</string>
    <string name="profile">Profile</string>
    <string name="search_your_destination">Search your destination</string>
    <string name="type_your_city">Type your city…</string>
    <string name="yourprofile">Your Profile</string>
    <string name="help_title">Help and FAQ</string>
    <string name="edit">Edit</string>
    <string name="privacy_and_conditions">Privacy and conditions</string>
    <string name="terms">Terms</string>
    <string name="facebook_social_button">facebook social button</string>
    <string name="instagram_social_button">instagram social button</string>
    <string name="mail_social_button">mail social button</string>
    <string name="city_name">city_name</string>
    <string name="image_of_selected_city">image of selected city</string>
    <string name="add_to_favourites">Add to favourites &#160; </string>
    <string name="not_in_your_favourite">Not in your favourite</string>
    <string name="in_your_favourites">In your favourites!</string>
    <string name="interested_look_for_other_info">Interested? Look for other info</string>
    <string name="social_icon_of_booking_website">social icon of booking website</string>
    <string name="social_icon_of_kayak_website">social icon of kayak website</string>
    <string name="social_icon_of_tripadvisor_website">social icon of tripadvisor website</string>
    <string name="onclick_come_back_to_previous_activity">onclick come back to previous activity</string>
    <string name="google_social_button">Google social button</string>
    <string name="app_logo">app logo</string>
    <string name="results">Results</string>
    <string name="continue_string">Continue</string>
    <string name="repeat_string">Repeat</string>
    <string name="image_of_the_city">image of the city</string>
    <string name="add_to_favourites_button">add to favourites button</string>
    <string name="go_to_user_profile">go to user profile</string>

    <!--Question text for survey-->
    <string name="first_question">Which kind of trip do you like to do this time?</string>
    <string name="second_question">Do you like travel abroad or locally?</string>
    <string name="third_question">Which is your budget?</string>
    <string name="fourth_question">What would you like to do once arrived?</string>
    <string name="fifth_question">How much are you annoyed by the tourist?</string>
    <string name="sixth_question">Hot or cold?</string>

    <string name="help_text">Have you some problem in the navigation ? don\'t worry! Below you will find all solutions to all the main tasks.\n\n
        1. How can I take inspiration from some interesting destinations based on my interests?\n
        Yes, for sure. After logged into application you have to fill out the questionnaire and based on your answers, MatchTravel will suggest you new interesting destinations! (you can also fill out again when you want the questionnaire in the section on the bottom bar whenever you want, to find other destinations if previous results didn\'t satisfied yourself)\n\n
        2. Can I search manually a destination?\n
        Yes, for sure. In the bottom navigation bar menu you will find the "Search" section in which you can search manually one of the destinations present in MatchTravel.\n\n
        3. Can I edit some info of my profile?\n
        Yes, but only a description. We made this choice to protect yourself against fake profiles and offering to the client major transparency on legal info of all users in MatchTravel. For this reason you are able to edit only the description and in order to do this you have to reach the "My Profile" section in the bottom navigation bar menu.\n\n
        4. Where I can find all my favourite destinations choose?\n
        Every time you fill out a questionnaire and you choose one or more favourite destinations, all them will appaire in the Wish List of the bottom navigation bar. In that section you will find also all the people interested on the same destinations you choose.\n\n
        5. Can I see major details on the cities?\n
        Yes, of course. Every time you got results of a questionnaire or you search manually a destination, you can accede to all details of that city simply clicking on the name of city. You will be redirected on a screen in which will be showed a little description of that city and a button to add/remove that city from favourites.\n\n
        We solved your doubts? hope to yes! if you are not satisfied at all please feel free to contact us at match.travel2019@gmail.com
    </string>
    <string name="txt_welcome">Welcome! This is the first time you log in Match Travel. Soon you will be able to enjoy the application but first we need you to describe a little yourself.\nType something down here.</string>
</resources>
