<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern_background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/facebook_btn_area"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_facebook_access"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/btn_facebook_access"
            android:contentDescription="@string/facebook_social_button"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/google_btn_area"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_btn_area">

        <ImageView
            android:id="@+id/btn_google_access"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/btn_google_access"
            android:contentDescription="@string/google_social_button"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="124dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_logo"/>

    <TextView
        android:id="@+id/label_two"
        android:layout_width="279dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/covesbold"
        android:lineSpacingExtra="4sp"
        android:text="@string/label_two"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_btn_area"
        app:layout_constraintVertical_bias="0.508" />

    <TextView
        android:id="@+id/label_two2"
        style="@style/label_one"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/label_one"
        android:text="@string/label_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="127dp"
        android:layout_height="102dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        android:indeterminateDuration="3000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

</android.support.constraint.ConstraintLayout>